# auto-mouse

./: CLAUDE.md  Cargo.toml  README.md  build.rs
src/: main.rs
src/config/: mod.rs  settings.rs
src/gui/: app copy.rs  app.rs  mod.rs  widgets.rs
src/mouse/: controller.rs  mod.rs
src/timer/: mod.rs  simple_timer.rs
