[package]
name = "auto_mouse"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI 프레임워크
eframe = "0.26.2"
egui = "0.26.2"

# 설정 관리
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 유틸리티
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"

# Windows용 마우스 제어
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

# Linux용 마우스 제어
[target.'cfg(unix)'.dependencies]
x11 = "2.21"
libc = "0.2"
